--- a/less/mine.less
+++ b/less/mine.less
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Tagesschrift';
+  src: url('../fonts/EliteHacker.ttf');
+}
+
 video { 
     transform: translateX(-50%) translateY(-50%);
     position: absolute;
@@ -21,6 +26,55 @@ video {
     background-size: cover;
     background-position: 50% 50%;
     overflow: hidden;
+}
+
+.brand-heading {
+    font-family: 'Tagesschrift', 'Georgia', serif;
+    letter-spacing: 2px;
+}
+
+@media(min-width: 1280px) {
+    .intro .intro-body .brand-heading {
+        font-size: 150px;
+    }
+}
+.rules-section {
+    width: 100%;
+    background: #474747 url('../img/bg-rules2.png');
+    // background-image: url('../img/bg-rules.jpg');
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    h2 {
+        color: #999;
+        text-shadow: 0px 3px 8px #2a2a2a;
+    }
+    .rules {
+        display: inline-block;
+        text-align: left;
+
+        p {
+            // color: #222;
+            color: #151414;
+            font-weight: 600;
+            text-shadow: 0px 2px 3px #555;
+
+            .rule-number {
+                padding-right: 10px;
+            }
+            .rule-highlight {
+                color: #ccbf2e;
+            }
+        }
+    }
+}
+@media(min-width:768px) {
+    .rules p {
+        letter-spacing: 1px;
+    }
 }
 
 .download-section {
