--- a/less/mine.less
+++ b/less/mine.less
@@ -55,6 +55,7 @@ video {
     .rules {
         display: inline-block;
         text-align: left;
+        max-width: 460px;
 
         p {
             // color: #222;
