--- a/less/mine.less
+++ b/less/mine.less
@@ -49,25 +49,35 @@ video {
     padding-bottom: 100px;
 
     h2 {
+        font-size: 42px;
         color: #999;
         text-shadow: 0px 3px 8px #2a2a2a;
     }
     .rules {
         display: inline-block;
         text-align: left;
-        max-width: 460px;
+        // max-width: 460px;
+        max-width: 640px;
 
         p {
             // color: #222;
-            color: #151414;
+            // color: #151414;
+            color: #EFEFEF;
             font-weight: 600;
-            text-shadow: 0px 2px 3px #555;
+            // text-shadow: 0px 2px 3px #555;
+            text-shadow: 0px -1px 1px #444;
+            font-size: 26px;
 
             .rule-number {
                 padding-right: 10px;
             }
             .rule-highlight {
-                color: #ccbf2e;
+                // color: #ccbf2e;
+                color: #ffde2a;
+                text-transform: uppercase;
+                font-style: italic;
+                text-shadow: -1px 1px 1px #66FF66;
+                font-size: 28px;
             }
         }
     }
