--- a/less/mine.less
+++ b/less/mine.less
@@ -76,7 +76,7 @@ video {
                 color: #ffde2a;
                 text-transform: uppercase;
                 font-style: italic;
-                text-shadow: -1px 1px 1px #66FF66;
+                // text-shadow: -1px 1px 1px #66FF66;
                 font-size: 28px;
             }
         }
