--- a/less/mine.less
+++ b/less/mine.less
@@ -121,3 +121,20 @@ video {
         margin-top: 0;
     }
 }
+
+// Sponsor
+.sponsor {
+  text-align: center;
+}
+
+.sponsor img {
+  max-width: 80%;
+}
+
+// Footer
+footer {
+
+    div.container {
+        color: #555555;
+    }
+}
