partner images issues

--- a/css/mine.css
+++ b/css/mine.css
@@ -103,7 +103,7 @@ video {
   text-align: center;
 }
 .sponsor img {
-  max-width: 80%;
+  max-width: 150px;
 }
 footer div.container {
   color: #555555;
