--- a/less/mine.less
+++ b/less/mine.less
@@ -3,6 +3,13 @@
   src: url('../fonts/EliteHacker.ttf');
 }
 
+.logo {
+  max-height: 100%;
+}
+.navbar-brand {
+    padding: 5px !important;
+}
+
 video { 
     transform: translateX(-50%) translateY(-50%);
     position: absolute;
